--- a/src/main/resources/templates/films/allfilms.html
+++ b/src/main/resources/templates/films/allfilms.html
@@ -47,9 +47,10 @@
         </tr>
         </tbody>
     </table>
-
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="films/addfilm">Add</a>
+        <a class="button-9" role="button" href="films/deletefilm">Delete by ID</a>
+
     </div>
 
     <footer>
