--- a/src/main/resources/templates/filmsubs/allfilmsubs.html
+++ b/src/main/resources/templates/filmsubs/allfilmsubs.html
@@ -28,9 +28,10 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
-    </div>
+        <a class="button-9" role="button" href="filmsubs/addfilmsub">Add</a>
+        <a class="button-9" role="button" href="filmsubs/deletefilmsub">Delete by ID</a>
 
+    </div>
     <footer>
         <div th:insert="index :: footer"></div>
     </footer>
