--- a/src/main/resources/templates/filmvoices/allfilmvoices.html
+++ b/src/main/resources/templates/filmvoices/allfilmvoices.html
@@ -29,7 +29,9 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="filmvoices/addfilmvoice">Add</a>
+        <a class="button-9" role="button" href="filmvoices/deletefilmvoice">Delete by ID</a>
+
     </div>
 
     <footer>
