--- a/src/main/resources/templates/producers/allproducers.html
+++ b/src/main/resources/templates/producers/allproducers.html
@@ -30,7 +30,8 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="producers/addproducer">Add</a>
+        <a class="button-9" role="button" href="producers/deleteproducer">Delete by ID</a>
     </div>
 
     <footer>
