--- a/src/main/resources/templates/subs/allsubs.html
+++ b/src/main/resources/templates/subs/allsubs.html
@@ -31,7 +31,9 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="subs/addsub">Add</a>
+        <a class="button-9" role="button" href="subs/deletesub">Delete by ID</a>
+
     </div>
 
     <footer>
