--- a/src/main/resources/static/styles/css/style.css
+++ b/src/main/resources/static/styles/css/style.css
@@ -4,10 +4,6 @@
     border: 0;
 }
 
-body {
-
-}
-
 div.list-container {
   text-align: center;
   background-color: #009879;
@@ -41,7 +37,7 @@ li a:hover {
   background-color: #1a4736;
 }
 
-body {background: #F0F0F0;}
+/*body {  background-image: url("background.png");}*/
 
 
 h2 {
@@ -55,8 +51,6 @@ margin-top: 40px;
     justify-content: space-around;
 }
 
-
-
 textarea {
   margin-top: 10px;
   width: 500px;
@@ -66,7 +60,6 @@ textarea {
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.07);
-  border-color: -moz-use-text-color #FFFFFF #FFFFFF -moz-use-text-color;
   border-image: none;
   border-radius: 6px 6px 6px 6px;
   border-style: none solid solid none;
@@ -103,7 +96,7 @@ textarea:focus {
     box-sizing: border-box;
     color: #fff;
     cursor: pointer;
-    font-size: 100%;
+    font-size: 19px;
     height: 44px;
     line-height: 1.15;
     margin: 12px 0 0;
@@ -119,7 +112,14 @@ textarea:focus {
     -webkit-user-select: none;
     touch-action: manipulation;
     width: 100%;
-    margin-bottom: 120px;
+    margin-bottom: 20px;
+    text-decoration: none;
+    padding-top: 10px;
+}
+
+.button-9:nth-child(2) {
+  background: black;
+  margin-bottom: 120px;
 }
 
 .button-9:disabled {
@@ -127,18 +127,17 @@ cursor: default;
 }
 
 .button-9:focus {
-box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+    color: black;
 }
 
 .footer {
-  color:#f0f9ff;
-  background-color:#282d32;
+    background-color:#5B5B5B;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 150px;
-   background-color: grey;
    color: white;
    text-align: center;
-   padding-top: 50px;
+   padding-top: 70px;
+   font-size: 20px;
 }
