--- a/src/main/resources/templates/scriptwriters/allscriptwriters.html
+++ b/src/main/resources/templates/scriptwriters/allscriptwriters.html
@@ -30,7 +30,8 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="scriptwriters/addscriptwriter">Add</a>
+        <a class="button-9" role="button" href="scriptwriters/deletescriptwriter">Delete by ID</a>
     </div>
 
     <footer>
