--- a/src/main/resources/templates/visitors/allvisitors.html
+++ b/src/main/resources/templates/visitors/allvisitors.html
@@ -33,7 +33,9 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="visitors/addvisitor">Add</a>
+        <a class="button-9" role="button" href="visitors/deletevisitor">Delete by ID</a>
+
     </div>
 
     <footer>
