--- a/src/main/resources/templates/voices/allvoices.html
+++ b/src/main/resources/templates/voices/allvoices.html
@@ -31,7 +31,9 @@
     </table>
 
     <div class="button-holder">
-        <button class="button-9" role="button">Add</button>
+        <a class="button-9" role="button" href="voices/addvoice">Add</a>
+        <a class="button-9" role="button" href="voices/deletevoice">Delete by ID</a>
+
     </div>
 
     <footer>
