--- a/src/main/resources/templates/films/addfilm.html
+++ b/src/main/resources/templates/films/addfilm.html
@@ -25,7 +25,7 @@
         </div>
         <div class="user-box">
             <input type="text" name="duration" required="true">
-            <label>Duration</label>
+            <label>Duration(hh:mm:ss)</label>
         </div>
         <div class="user-box">
             <input type="text" name="year" required="true">
@@ -33,7 +33,7 @@
         </div>
         <div class="user-box">
             <input type="text" name="rating" required="true">
-            <label>Rating</label>
+            <label>Rating(>0)</label>
         </div>
         <div class="user-box">
             <input type="text" name="cash" required="true">
@@ -41,11 +41,11 @@
         </div>
         <div class="user-box">
             <input type="text" name="episodes" required="true">
-            <label>Episodes</label>
+            <label>Episodes(>0)</label>
         </div>
         <div class="user-box">
             <input type="text" name="seasons" required="true">
-            <label>Seasons</label>
+            <label>Seasons(>0)</label>
         </div>
         <div class="user-box">
             <input type="text" name="producer" required="true">
