--- a/src/main/resources/templates/subs/addsub.html
+++ b/src/main/resources/templates/subs/addsub.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
@@ -20,7 +19,7 @@
         </div>
         <div class="user-box">
             <input type="text" name="price" required="true">
-            <label>Price</label>
+            <label>Price(>0)</label>
         </div>
         <button role="button" type="submit">
             <span></span>
