--- a/src/main/resources/templates/subsofvisitors/addsubofvisitor.html
+++ b/src/main/resources/templates/subsofvisitors/addsubofvisitor.html
@@ -25,11 +25,11 @@
         </div>
         <div class="user-box">
             <input type="text" name="start" required="true">
-            <label>Start</label>
+            <label>Start(hh:mm:ss)</label>
         </div>
         <div class="user-box">
             <input type="text" name="end" required="true">
-            <label>End</label>
+            <label>End(hh:mm:ss)</label>
         </div>
         <div class="user-box">
             <input type="text" name="status" required="true">
