--- a/src/main/resources/templates/films/deletefilm.html
+++ b/src/main/resources/templates/films/deletefilm.html
@@ -14,8 +14,9 @@
     <h2>Film</h2>
     <form th:action="@{/films/deletefilm}" method="POST" enctype="multipart/form-data" id="usrinput">
         <div class="user-box">
-            <input type="text" name="id" required="true">
-            <label>ID</label>
+            <select name="id">
+                <option th:each="film : ${films}" th:value="${film.getId()}" th:text="${film.getId()}"></option>
+            </select>
         </div>
         <button role="button" type="submit">
             <span></span>
