--- a/src/main/resources/templates/genres/deletegenre.html
+++ b/src/main/resources/templates/genres/deletegenre.html
@@ -14,8 +14,9 @@
     <h2>Genre</h2>
     <form th:action="@{/genres/deletegenre}" method="POST" enctype="multipart/form-data" id="usrinput">
         <div class="user-box">
-            <input type="text" name="id" required="true">
-            <label>ID</label>
+            <select name="id">
+                <option th:each="genre : ${genres}" th:value="${genre.getId()}" th:text="${genre.getId()}"></option>
+            </select>
         </div>
         <button role="button" type="submit">
             <span></span>
