--- a/src/main/resources/static/styles/css/form.css
+++ b/src/main/resources/static/styles/css/form.css
@@ -27,7 +27,7 @@ body {
   position: relative;
 }
 
-.login-box .user-box input {
+.login-box .user-box input, select {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
