--- a/src/main/resources/templates/filmvoices/allfilmvoices.html
+++ b/src/main/resources/templates/filmvoices/allfilmvoices.html
@@ -15,14 +15,14 @@
     <table class="styled-table">
         <thead>
         <tr>
-            <th>Film ID</th>
-            <th>Voice ID</th>
+            <th>Film</th>
+            <th>Voice</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="filmvoice : ${filmvoices}">
-            <td th:text="${filmvoice.getFilmId()}">sub</td>
-            <td th:text="${filmvoice.getVoiceId()}">visitor</td>
+            <td th:text="${filmvoice.getFilm()}">sub</td>
+            <td th:text="${filmvoice.getVoice()}">visitor</td>
 
         </tr>
         </tbody>
