--- a/src/main/resources/templates/filmvoices/deletefilmvoice.html
+++ b/src/main/resources/templates/filmvoices/deletefilmvoice.html
@@ -14,12 +14,14 @@
     <h2>Film voice</h2>
     <form th:action="@{/filmvoices/deletefilmvoice}" method="POST" enctype="multipart/form-data" id="usrinput">
         <div class="user-box">
-            <input type="text" name="filmid" required="true">
-            <label>FilmID</label>
+            <select name="filmid">
+                <option th:each="film : ${films}" th:value="${film.getId()}" th:text="${film.getId()}"></option>
+            </select>
         </div>
         <div class="user-box">
-            <input type="text" name="voiceid" required="true">
-            <label>VoiceID</label>
+            <select name="voiceid">
+                <option th:each="voice : ${voices}" th:value="${voice.getId()}" th:text="${voice.getId()}"></option>
+            </select>
         </div>
         <button role="button" type="submit">
             <span></span>
