--- a/src/main/resources/templates/subsofvisitors/deletesubofvisitor.html
+++ b/src/main/resources/templates/subsofvisitors/deletesubofvisitor.html
@@ -14,12 +14,14 @@
     <h2>Sub of Visitor</h2>
     <form th:action="@{/subsofvisitors/deletesubofvisitor}" method="POST" enctype="multipart/form-data" id="usrinput">
         <div class="user-box">
-            <input type="text" name="subid" required="true">
-            <label>SubID</label>
+            <select name="subid">
+                <option th:each="sub : ${subs}" th:value="${sub.getId()}" th:text="${sub.getId()}"></option>
+            </select>
         </div>
         <div class="user-box">
-            <input type="text" name="visitorid" required="true">
-            <label>VisitorID</label>
+            <select name="visitorid">
+                <option th:each="visitor : ${visitors}" th:value="${visitor.getId()}" th:text="${visitor.getId()}"></option>
+            </select>
         </div>
         <button role="button" type="submit">
             <span></span>
